force-app/main/default/objects/InventoryMoveLineOutbound__c/InventoryMoveLineOutbound__c.object-meta.xml
<CustomObject>
    <label>在庫移動明細 (出庫)</label>
    <nameField>
        <displayFormat>IMLO-{0000000}</displayFormat>
        <label>在庫移動明細 (出庫) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>