force-app/main/default/objects/InventoryMoveLineOutbound__c/fields/barcode__c.field-meta.xml
<CustomField>
    <fullName>barcode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>バーコード</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Barcode__c.current_inventory__r.Id</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Barcode__c</referenceTo>
    <relationshipLabel>在庫移動明細 (出庫)</relationshipLabel>
    <relationshipName>inventory_move_line_outbounds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>