force-app/main/default/objects/InventoryMoveLineOutbound__c/fields/outbound_quantity__c.field-meta.xml
<CustomField>
    <fullName>outbound_quantity__c</fullName>
    <label>出庫数</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>