force-app/main/default/objects/InventoryMoveLineOutbound__c/validationRules/outbound_quantity_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>outbound_quantity_validation</fullName>
    <active>true</active>
    <errorConditionFormula>outbound_quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>outbound_quantity__c</errorDisplayField>
    <errorMessage>出庫数は0以上で入力してください。</errorMessage>
</ValidationRule>